feat: añade imágenes y datos a los componentes de áreas comunes

--- a/src/components/common-area-item.astro
+++ b/src/components/common-area-item.astro
@@ -9,7 +9,7 @@ export interface Props {
 const { class: className = '', index, title, description } = Astro.props
 ---
 
-<li>
+<li id={`commons-areas-${title.replaceAll(' ', '-').toLowerCase()}`}>
   <details
     name='common-area'
     class:list={[className, 'relative backdrop-blur-lg transition']}
