--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
   --color-secondary-green: #29401C;
 
   --color-available: #2c9c9e;
-  --color-reserved: #d69058;
+  --color-reserved: #bb6830;
   --color-sold: #d8354b;
 }
 
