--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -26,11 +26,11 @@ import InstagramIcon from '@/components/icons/instagram.astro'
       <div
         class='flex flex-col items-center text-center md:text-start md:items-start md:flex-row gap-x-4 gap-y-2 [&>a]:hover:underline'
       >
-        <a class='text-md font-extralight tracking-[0.2rem] uppercase' href='#'
+        <a class='text-sm font-extralight tracking-[0.2rem] uppercase' href='#'
           >Aviso de privacidad</a
         >
         <div class='hidden md:block'>&bull;</div>
-        <a class='text-md font-extralight tracking-[0.2rem] uppercase' href='#'
+        <a class='text-sm font-extralight tracking-[0.2rem] uppercase' href='#'
           >Términos y Condiciones</a
         >
       </div>
@@ -40,15 +40,17 @@ import InstagramIcon from '@/components/icons/instagram.astro'
       <div class='flex flex-row gap-4 [&>a]:hover:scale-110'>
         <a
           class='font-extralight tracking-[0.2rem] uppercase transition-all'
-          href='#'
+          href='https://www.instagram.com/marasaresidencial/'
+          target='_blank'
         >
-          <FacebookIcon class='size-8' />
+          <FacebookIcon class='size-6' />
         </a>
         <a
           class='font-extralight tracking-[0.2rem] uppercase transition-all'
-          href='#'
+          href='https://www.facebook.com/profile.php?id=61576808780179'
+          target='_blank'
         >
-          <InstagramIcon class='size-8' />
+          <InstagramIcon class='size-6' />
         </a>
       </div>
     </div>
