--- a/src/components/inventory.astro
+++ b/src/components/inventory.astro
@@ -39,7 +39,7 @@ const t = useTranslations(lang)
     <div class='relative w-full h-fit'>
       <div class='max-w-full text-white uppercase'>
         <div
-          class='max-w-full flex flex-row flex-wrap gap-x-8 gap-y-2 items-center justify-end mb-4'
+          class='max-w-full flex flex-row flex-wrap gap-x-8 gap-y-2 items-center justify-center mb-4'
         >
           <div class='flex flex-row gap-2 items-center'>
             <div class='border-1 size-6 rounded-xs border-white bg-available'>
@@ -90,7 +90,7 @@ const t = useTranslations(lang)
 
       <article
         id='information'
-        class='overflow-hidden hidden flex-row justify-center items-center absolute -bottom-24 left-4 rounded-lg border-1 text-primary-coral uppercase bg-white shadow-lg tracking-wider transition-all'
+        class='overflow-hidden hidden flex-col justify-center items-center absolute -bottom-24 left-4 rounded-lg border-1 text-gray-700 uppercase bg-white shadow-lg tracking-wider transition-all'
       >
         <div class='flex flex-col p-3'>
           <div class='flex flex-row justify-between items-start'>
