--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -1,10 +1,11 @@
 ---
+import { Image } from 'astro:assets'
 import CaretRight from '@/components/icons/caret-right.astro'
 
 export interface Props {
   class?: string
   images: {
-    src: string
+    src: ImageMetadata | string
     alt: string
   }[]
   title: string
@@ -48,7 +49,13 @@ const title = titleProp.toLowerCase().replace(/\s+/g, '-')
   >
     {
       images.map(({ src, alt }) => (
-        <img src={src} alt={alt} class='min-w-full min-h-full object-cover' />
+        <Image
+          src={src as string}
+          alt={alt}
+          class='min-w-full min-h-full object-cover'
+          width={1920}
+          height={1080}
+        />
       ))
     }
   </div>
