--- a/src/components/inventory.astro
+++ b/src/components/inventory.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets'
 import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 import Section from '@/components/section.astro'
 
@@ -61,7 +62,7 @@ const t = useTranslations(lang)
       </div>
 
       <div class='relative w-full h-fit'>
-        <img
+        <Image
           src={imagesInventory.src}
           alt={imagesInventory.alt}
           class='bg-primary-coral'
