--- a/src/components/welcome.astro
+++ b/src/components/welcome.astro
@@ -31,7 +31,7 @@ const t = useTranslations(lang)
     </p>
   </div>
 
-  <div class='h-[85vh] w-full'>
+  <div class='min-h-[85vh] w-full'>
     <Carousel
       images={imagesWelcome}
       title='Welcome'
