feat: actualiza traducciones y etiquetas en el proyecto, mejora el estilo del pie de página y enlaces

--- a/src/components/options-item.astro
+++ b/src/components/options-item.astro
@@ -12,7 +12,7 @@ const { label, path } = Astro.props
 <li
   class='w-full md:w-fit min-w-48 h-full rounded-sm border-2 border-primary-coral group overflow-hidden'
 >
-  <a href={path} class='relative block'>
+  <a href={path} target='_blank' class='relative block'>
     <div
       class='absolute inset-0 w-full h-full bg-primary-coral -translate-x-full group-hover:translate-x-0 transition-transform duration-300 ease-in-out z-0'
     >
