--- a/src/components/options.astro
+++ b/src/components/options.astro
@@ -9,12 +9,12 @@ const t = useTranslations(lang)
 
 const routesOptions = [
   {
-    label: t('options.inventory'),
+    label: t('options.prices'),
     path: '#'
   },
   {
     label: t('options.magazine'),
-    path: '#'
+    path: 'https://drive.google.com/drive/u/0/folders/1RPNYHdnnrNst65u8VJOMQHB_JTnXBX-v'
   }
 ]
 ---
