--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -24,13 +24,13 @@ import InstagramIcon from '@/components/icons/instagram.astro'
       class='w-full max-w-[1440px] mx-auto py-8 md:py-2 px-8 md:px-24 flex flex-col justify-center items-center md:flex-row md:flex-wrap md:justify-between gap-x-4 gap-y-8 md:gap-y-2'
     >
       <div
-        class='flex flex-col items-center text-center md:text-start md:items-start md:flex-row gap-x-4 gap-y-2 [&>a]:hover:underline'
+        class='flex flex-col items-center text-center text-sm md:text-start md:items-start md:flex-row gap-x-4 gap-y-2 [&>a]:hover:underline'
       >
-        <a class='text-sm font-extralight tracking-[0.2rem] uppercase' href='#'
+        <a class='font-extralight tracking-[0.2rem] uppercase' href='#'
           >Aviso de privacidad</a
         >
         <div class='hidden md:block'>&bull;</div>
-        <a class='text-sm font-extralight tracking-[0.2rem] uppercase' href='#'
+        <a class='font-extralight tracking-[0.2rem] uppercase' href='#'
           >Términos y Condiciones</a
         >
       </div>
