feat: añade componente Sticky con enlace a WhatsApp y nuevo ícono

--- a/src/components/app.astro
+++ b/src/components/app.astro
@@ -12,9 +12,11 @@ import Gallery from '@/components/gallery.astro'
 import Quote from '@/components/quote.astro'
 import Footer from '@/components/footer.astro'
 import NavBar from '@/components/navbar/index.astro'
+import Sticky from '@/components/sticky.astro'
 ---
 
 <Layout>
+  <Sticky />
   <Hero />
   <NavBar />
   <Welcome />
