feat: actualiza estilos de imagen en el componente de ubicación para mejorar la visualización

--- a/src/components/ubication.astro
+++ b/src/components/ubication.astro
@@ -7,6 +7,6 @@ import { imagesUbication } from '@/consts/images'
   <Image
     src={imagesUbication.src}
     alt={imagesUbication.alt}
-    class='w-full h-full object-cover aspect-video object-right-top'
+    class='w-full h-full max-h-screen object-cover aspect-video object-right-top'
   />
 </section>
