--- a/src/components/commons-areas.astro
+++ b/src/components/commons-areas.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets'
 import Section from '@/components/section.astro'
 import CommonAreaItem from './common-area-item.astro'
 
@@ -10,26 +11,31 @@ const t = useTranslations(lang)
 
 const commonsAreas = [
   {
+    id: 'security24hrs',
     title: t('commons-areas.items.security-24-hrs.title'),
     description: t('commons-areas.items.security-24-hrs.description'),
     image: imagesCommonsAreas.security24hrs
   },
   {
+    id: 'coworkingArea',
     title: t('commons-areas.items.co-working-area.title'),
     description: t('commons-areas.items.co-working-area.description'),
     image: imagesCommonsAreas.coworkingArea
   },
   {
+    id: 'eventRoom',
     title: t('commons-areas.items.event-room.title'),
     description: t('commons-areas.items.event-room.description'),
     image: imagesCommonsAreas.eventRoom
   },
   {
+    id: 'gym',
     title: t('commons-areas.items.gymnasium.title'),
     description: t('commons-areas.items.gymnasium.description'),
     image: imagesCommonsAreas.gymnasium
   },
   {
+    id: 'administrationOffice',
     title: t('commons-areas.items.administration-office.title'),
     description: t('commons-areas.items.administration-office.description'),
     image: imagesCommonsAreas.administrationOffice
@@ -59,20 +65,27 @@ const commonsAreas = [
       <div
         class='mt-12 w-full flex flex-row flex-wrap items-center justify-center gap-x-20 gap-y-10'
       >
-        <div class='flex-1 min-w-[250px]'>
-          <img
-            id='commons-areas-image'
-            src={imagesCommonsAreas.security24hrs}
-            alt={t('common-areas.img.alt')}
-            class='aspect-[7/9] lg:aspect-video object-cover rounded-xl transition-all'
-            data-images={JSON.stringify(commonsAreas)}
-          />
+        <div
+          id='commons-areas-image'
+          class='flex-1 min-w-[250px] aspect-[7/9] lg:aspect-video rounded-xl transition-all overflow-hidden'
+        >
+          {
+            Object.entries(imagesCommonsAreas).map(([key, image]) => (
+              <Image
+                id={`commons-areas-image-${key}`}
+                src={image as ImageMetadata}
+                alt={t('common-areas.img.alt')}
+                class='hidden object-cover'
+              />
+            ))
+          }
         </div>
 
         <ul class='flex-1 flex flex-col min-w-[250px] md:max-w-[30ch]'>
           {
-            commonsAreas.map(({ title, description }, index) => (
+            commonsAreas.map(({ id, title, description }, index) => (
               <CommonAreaItem
+                id={id}
                 index={index}
                 title={title}
                 description={description}
@@ -96,20 +109,25 @@ const commonsAreas = [
 <script>
   const $commonsAreasImage = document.querySelector(
     '#commons-areas-image'
-  ) as HTMLImageElement
+  ) as HTMLDivElement
   const $commonsAreas = document.querySelectorAll('#commons-areas [id]')
 
-  const commonsAreas = JSON.parse($commonsAreasImage.dataset.images || '{}')
+  const $commonsAreasImages = document.querySelectorAll(
+    'img[id^="commons-areas-image-"]'
+  ) as NodeListOf<HTMLImageElement>
+  $commonsAreasImages[0].classList.remove('hidden')
 
   $commonsAreas.forEach((li) => {
     li.addEventListener('click', () => {
       $commonsAreasImage.classList.add('animate-fade-in')
 
       setTimeout(() => {
-        const index = Array.from($commonsAreas).indexOf(li) - 1
-        const { image } = commonsAreas[index]
-
-        $commonsAreasImage.src = image
+        $commonsAreasImages.forEach((image) => image.classList.add('hidden'))
+        const idImage = li.id.replace('commons-areas-', '')
+        const image = $commonsAreasImages.values().find((image) => {
+          return image.id === `commons-areas-image-${idImage}`
+        })
+        if (image) image.classList.remove('hidden')
         $commonsAreasImage.classList.remove('animate-fade-in')
       }, 300)
     })
