feat: actualiza modelos y traducciones en el componente de inventario, añade nueva imagen de fachada

--- a/src/components/inventory-mobile.astro
+++ b/src/components/inventory-mobile.astro
@@ -10,7 +10,7 @@ import ModelItem from './model-item.astro'
     bedrooms='3'
   />
   <ModelItem
-    model='snail-model'
+    model='caracol-model'
     size='186.57 m2'
     price='$2,743,195 (MXN)'
     bedrooms='3'
