--- a/src/components/inventory.astro
+++ b/src/components/inventory.astro
@@ -20,7 +20,7 @@ const t = useTranslations(lang)
 <div class='bg-primary-coral'>
   <Section
     id='inventory'
-    class='relative flex-col py-20 pb-32 px-4 !bg-transparent'
+    class='relative flex-col py-20 pb-32 md:pb-54 lg:pb-32 px-4 !bg-transparent'
   >
     <heading
       class='uppercase text-center h-fit flex flex-col items-center gap-2 text-white'
@@ -38,26 +38,24 @@ const t = useTranslations(lang)
     <div class='w-full h-[1px] my-8 bg-white'></div>
 
     <div class='relative w-full h-fit'>
-      <div class='max-w-full text-white uppercase'>
-        <div
-          class='max-w-full flex flex-row flex-wrap gap-x-8 gap-y-2 items-center justify-center mb-4'
-        >
-          <div class='flex flex-row gap-2 items-center'>
-            <div class='border-1 size-6 rounded-xs border-white bg-available'>
-            </div>
-            <p>{t('inventory.available')}</p>
+      <div
+        class='w-fit mx-auto uppercase flex flex-row flex-wrap gap-x-8 gap-y-2 items-center justify-center mb-4 bg-white rounded-md text-gray-700 px-4 py-2'
+      >
+        <div class='flex flex-row gap-2 items-center'>
+          <div class='border-1 size-6 rounded-xs border-white bg-available'>
           </div>
+          <p>{t('inventory.available')}</p>
+        </div>
 
-          <div class='flex flex-row gap-2 items-center'>
-            <div class='border-1 size-6 rounded-xs border-white bg-reserved'>
-            </div>
-            <p>{t('inventory.reserved')}</p>
+        <div class='flex flex-row gap-2 items-center'>
+          <div class='border-1 size-6 rounded-xs border-white bg-reserved'>
           </div>
+          <p>{t('inventory.reserved')}</p>
+        </div>
 
-          <div class='flex flex-row gap-2 items-center'>
-            <div class='border-1 size-6 rounded-xs border-white bg-sold'></div>
-            <p>{t('inventory.sold')}</p>
-          </div>
+        <div class='flex flex-row gap-2 items-center'>
+          <div class='border-1 size-6 rounded-xs border-white bg-sold'></div>
+          <p>{t('inventory.sold')}</p>
         </div>
       </div>
 
@@ -91,44 +89,74 @@ const t = useTranslations(lang)
 
       <article
         id='information'
-        class='overflow-hidden hidden flex-col justify-center items-center absolute -bottom-24 left-4 rounded-lg border-1 text-gray-700 uppercase bg-white shadow-lg tracking-wider transition-all'
+        class='overflow-hidden hidden flex-row justify-center items-center absolute -bottom-44 lg:-bottom-24 left-4 rounded-lg border-1 text-gray-700 uppercase bg-white shadow-lg tracking-wider transition-all'
       >
-        <div class='flex flex-col p-3 w-full'>
-          <div class='flex flex-row justify-between items-start'>
+        <div class='flex flex-col p-3'>
+          <div class='flex flex-row justify-between items-start gap-8'>
             <div class='flex flex-col'>
-              <h3 id='model' class='text-xl font-semibold leading-none'>
+              <h3
+                id='model'
+                class='text-lg lg:text-xl font-semibold leading-none w-[20ch]'
+              >
                 {t(`inventory.coral-model`)}
               </h3>
-              <small id='status' class='text-sm opacity-80 text-secondary-blue'
+              <small
+                id='status'
+                class='text-xs lg:text-sm opacity-80 text-secondary-blue'
                 >{t('inventory.available')}</small
               >
             </div>
 
-            <p id='id' class='text-4xl font-bold leading-none'>101</p>
+            <p id='id' class='text-3xl lg:text-4xl font-bold leading-none'>
+              101
+            </p>
           </div>
 
           <div class='w-full h-[1px] my-2 bg-primary-coral'></div>
 
           <div
-            class='grid grid-cols-2 grid-rows-3 gap-2 font-extralight tracking-wide text-lg [&>h4]:font-normal'
+            class='grid grid-cols-2 grid-rows-3 gap-x-3 gap-y-1 font-extralight tracking-wide text-sm lg:text-lg [&>h4]:font-normal'
           >
-            <h4>{t('inventory.bedrooms')}</h4>
-            <p id='bedrooms'>3</p>
-
             <h4>{t('inventory.lote')}</h4>
-            <p id='size'>186.57 m2</p>
+            <p id='lote'>125.64 m2</p>
 
-            <h4>{t('inventory.price-with-rooftop')}</h4>
-            <p id='price'>$2,743,195 (MXN)</p>
+            <h4>{t('inventory.inside')}</h4>
+            <p id='inside'>186.57 m2</p>
+
+            <h4>{t('inventory.outside')}</h4>
+            <p id='outside'>48.27 m2</p>
+
+            <h4>{t('inventory.restrooms')}</h4>
+            <p id='restrooms'>3</p>
+
+            <h4>{t('inventory.bedrooms')}</h4>
+            <p id='bedrooms'>4</p>
+
+            <h4>{t('inventory.price')}</h4>
+            <p id='price'>$7.483.000,00</p>
+
+            <a
+              href='#'
+              target='_blank'
+              rel='noopener noreferrer'
+              class='font-normal hover:underline transition'
+              >{t('inventory.price-rooftop')}*</a
+            >
+            <p id='price-rooftop'>$254.000,00</p>
           </div>
+          <small class='text-xs lg:text-sm text-gray-500 font-light mt-2'>
+            *{t('inventory.terms-rooftop')}
+          </small>
         </div>
 
-        <div class='max-h-48 aspect-video'>
+        <div
+          class='max-h-68 lg:max-h-84 aspect-square flex justify-center items-center'
+        >
           <Image
             id='model-image'
             src={inventoryData[0].image}
             alt={t('inventory.image')}
-            class='w-full h-full'
+            class='w-full h-full object-cover'
           />
         </div>
       </article>
@@ -147,18 +175,31 @@ const t = useTranslations(lang)
   const modelElement = information?.querySelector('#model')
   const idElement = information?.querySelector('#id')
   const statusElement = information?.querySelector('#status')
+  const loteElement = information?.querySelector('#lote')
+  const insideElement = information?.querySelector('#inside')
+  const outsideElement = information?.querySelector('#outside')
+  const restroomsElement = information?.querySelector('#restrooms')
   const bedroomsElement = information?.querySelector('#bedrooms')
-  const sizeElement = information?.querySelector('#size')
   const priceElement = information?.querySelector('#price')
+  const priceRooftopElement = information?.querySelector('#price-rooftop')
   const modelImageElement = information?.querySelector(
     '#model-image'
   ) as HTMLImageElement
 
   inventoryData.forEach((data) => {
     const id = (data as HTMLElement).dataset.id ?? ''
-    const { status, bedrooms, size, price, image, model } = JSON.parse(
-      (data as HTMLElement).dataset.info || '{}'
-    )
+    const {
+      status,
+      image,
+      model,
+      lote,
+      inside,
+      outside,
+      restrooms,
+      bedrooms,
+      price,
+      priceRooftop
+    } = JSON.parse((data as HTMLElement).dataset.info || '{}')
     const lang = (data as HTMLElement).dataset.lang as 'en' | 'es'
     const t = useTranslations(lang)
 
@@ -173,10 +214,18 @@ const t = useTranslations(lang)
           `inventory.${model as keyof typeof t}-model`
         )
       if (idElement) idElement.textContent = id
-      if (bedroomsElement) bedroomsElement.textContent = bedrooms
-      if (sizeElement) sizeElement.textContent = size
-      if (priceElement) priceElement.textContent = price
       if (modelImageElement) modelImageElement.src = image.src
+      if (loteElement) loteElement.textContent = lote
+      if (insideElement) insideElement.textContent = inside
+      if (outsideElement) outsideElement.textContent = outside
+      if (restroomsElement) restroomsElement.textContent = restrooms
+      if (bedroomsElement) bedroomsElement.textContent = bedrooms
+      if (priceElement) priceElement.textContent = price
+      if (priceRooftopElement) priceRooftopElement.textContent = priceRooftop
+
+      modelImageElement.classList.remove('object-left', 'object-right')
+      if (model === 'caracol') modelImageElement.classList.add('object-left')
+      if (model === 'coral') modelImageElement.classList.add('object-right')
 
       inventoryData.forEach((data) => {
         data.classList.replace('md:opacity-100', 'md:opacity-80')
