--- a/src/components/inventory.astro
+++ b/src/components/inventory.astro
@@ -89,7 +89,7 @@ const t = useTranslations(lang)
 
       <article
         id='information'
-        class='overflow-hidden hidden flex-row justify-center items-center absolute -bottom-44 lg:-bottom-24 left-4 rounded-lg border-1 text-gray-700 uppercase bg-white shadow-lg tracking-wider transition-all'
+        class='max-w-none lg:max-w-3/5 overflow-hidden hidden flex-row justify-center items-center absolute -bottom-44 lg:-bottom-24 left-4 rounded-lg border-1 text-gray-700 uppercase bg-white shadow-lg tracking-wider transition-all'
       >
         <div class='flex flex-col p-3'>
           <div class='flex flex-row justify-between items-start gap-8'>
