feat: mejora el componente de inventario con nuevos cálculos y traducciones, añade descripción y campos para el modelo Plus

--- a/src/components/commons-areas.astro
+++ b/src/components/commons-areas.astro
@@ -81,7 +81,7 @@ const commonsAreas = [
                 id={`commons-areas-image-${key}`}
                 src={image as ImageMetadata}
                 alt={t('common-areas.img.alt')}
-                class='hidden object-cover'
+                class='hidden w-full h-full object-cover'
               />
             ))
           }
