fix: corrige la ruta de importación de inventoryData en los componentes de inventario y modelo

--- a/src/components/inventory-mobile.astro
+++ b/src/components/inventory-mobile.astro
@@ -1,7 +1,7 @@
 ---
 import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 import ModelItem from './model-item.astro'
-import { inventoryData, plusModelData } from 'src/consts/inventory'
+import { inventoryData, plusModelData } from '@/consts/inventory'
 
 const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
