--- a/src/components/inventory.astro
+++ b/src/components/inventory.astro
@@ -20,7 +20,7 @@ const t = useTranslations(lang)
 <div class='bg-primary-coral'>
   <Section
     id='inventory'
-    class='relative flex-col py-20 pb-32 md:pb-54 lg:pb-32 px-4 !bg-transparent'
+    class='relative flex-col py-20 pb-20 md:pb-54 lg:pb-32 px-4 !bg-transparent'
   >
     <heading
       class='uppercase text-center h-fit flex flex-col items-center gap-2 text-white'
@@ -89,7 +89,7 @@ const t = useTranslations(lang)
 
       <article
         id='information'
-        class='max-w-none lg:max-w-3/5 overflow-hidden hidden flex-row justify-center items-center absolute -bottom-44 lg:-bottom-24 left-4 rounded-lg border-1 text-gray-700 uppercase bg-white shadow-lg tracking-wider transition-all'
+        class='max-w-none lg:max-w-3/5 overflow-hidden hidden md:flex flex-row justify-center items-center absolute -bottom-44 lg:-bottom-24 left-4 rounded-lg border-1 text-gray-700 uppercase bg-white shadow-lg tracking-wider transition-all'
       >
         <div class='flex flex-col p-3'>
           <div class='flex flex-row justify-between items-start gap-8'>
@@ -98,17 +98,17 @@ const t = useTranslations(lang)
                 id='model'
                 class='text-lg lg:text-xl font-semibold leading-none w-[20ch]'
               >
-                {t(`inventory.coral-model`)}
+                {t(`inventory.${inventoryData[0].model}-model`)}
               </h3>
               <small
                 id='status'
                 class='text-xs lg:text-sm opacity-80 text-secondary-blue'
-                >{t('inventory.available')}</small
+                >{t(`inventory.${inventoryData[0].status}`)}</small
               >
             </div>
 
             <p id='id' class='text-3xl lg:text-4xl font-bold leading-none'>
-              101
+              {inventoryData[0].id}
             </p>
           </div>
 
@@ -118,22 +118,22 @@ const t = useTranslations(lang)
             class='grid grid-cols-2 grid-rows-3 gap-x-3 gap-y-1 font-extralight tracking-wide text-sm lg:text-lg [&>h4]:font-normal'
           >
             <h4>{t('inventory.lote')}</h4>
-            <p id='lote'>125.64 m2</p>
+            <p id='lote'>{inventoryData[0].lote} m2</p>
 
             <h4>{t('inventory.inside')}</h4>
-            <p id='inside'>186.57 m2</p>
+            <p id='inside'>{inventoryData[0].inside} m2</p>
 
             <h4>{t('inventory.outside')}</h4>
-            <p id='outside'>48.27 m2</p>
+            <p id='outside'>{inventoryData[0].outside} m2</p>
 
             <h4>{t('inventory.restrooms')}</h4>
-            <p id='restrooms'>3</p>
+            <p id='restrooms'>{inventoryData[0].restrooms}</p>
 
             <h4>{t('inventory.bedrooms')}</h4>
-            <p id='bedrooms'>4</p>
+            <p id='bedrooms'>{inventoryData[0].bedrooms}</p>
 
             <h4>{t('inventory.price')}</h4>
-            <p id='price'>$7.483.000,00</p>
+            <p id='price'>{inventoryData[0].price}</p>
 
             <a
               href='#'
@@ -142,7 +142,7 @@ const t = useTranslations(lang)
               class='font-normal hover:underline transition'
               >{t('inventory.price-rooftop')}*</a
             >
-            <p id='price-rooftop'>$254.000,00</p>
+            <p id='price-rooftop'>{inventoryData[0].priceRooftop}</p>
           </div>
           <small class='text-xs lg:text-sm text-gray-500 font-light mt-2'>
             *{t('inventory.terms-rooftop')}
@@ -156,7 +156,7 @@ const t = useTranslations(lang)
             id='model-image'
             src={inventoryData[0].image}
             alt={t('inventory.image')}
-            class='w-full h-full object-cover'
+            class='w-full h-full object-cover object-left'
           />
         </div>
       </article>
@@ -270,10 +270,5 @@ const t = useTranslations(lang)
       display: none;
       opacity: 0;
     }
-  }
-
-  .hidden {
-    opacity: 0;
-    display: none;
   }
 </style>
