--- a/src/components/model-item.astro
+++ b/src/components/model-item.astro
@@ -1,7 +1,7 @@
 ---
 import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 import CaretRight from './icons/caret-right.astro'
-import { inventoryData as TypeInventoryData } from 'src/consts/inventory'
+import { inventoryData as TypeInventoryData } from '@/consts/inventory'
 
 const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
